[SYNCOPE-1579] Adding SAML 2.0 support via pac4j-saml (#208)